<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/addImage"
          android:title="@string/add_image_menu"
          app:showAsAction="always"
          android:icon="@drawable/ic_photo_white"/>
    <item android:id="@+id/loadColors"
          android:title="@string/load_selected_colors_menu"
          app:showAsAction="always"
          android:icon="@drawable/ic_done"/>
    <item android:id="@id/swapColors"
          android:title="@string/swap_main_colors_menu"
          app:showAsAction="always"
          android:icon="@drawable/ic_swap"
          tools:ignore="AlwaysShowAction"/>
    <item android:id="@+id/cropImage"
          android:title="@string/crop_image_menu"
          app:showAsAction="always"
          android:icon="@drawable/ic_crop"
          tools:ignore="AlwaysShowAction"/>
</menu>